Fixed navigation z-index

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -735,4 +735,5 @@ body{
   margin: 0 !important;
   position: absolute;
   top: 0;
+  z-index: 1;
 }
